--- a/todo/package.json
+++ b/todo/package.json
@@ -14,10 +14,11 @@
     "@types/react": "^17.0.15",
     "@types/react-dom": "^17.0.9",
     "clsx": "^1.1.1",
+    "immer": "^9.0.6",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.4",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^5.0.1",
     "redux": "^4.1.1",
     "redux-devtools-extension": "^2.13.9",
     "typescript": "^4.3.5",
