--- a/todo/package.json
+++ b/todo/package.json
@@ -49,8 +49,12 @@
     ]
   },
   "devDependencies": {
+    "@svgr/webpack": "^6.2.1",
     "eslint": "^7.31.0",
     "eslint-config-google": "^0.14.0",
     "prettier": "2.3.2"
+  },
+  "overrides": {
+    "@svgr/webpack": "$@svgr/webpack"
   }
 }
